--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     </g>
 </svg>
 <div class="message-box">
-  <h1>404</h1>
-  <p>Page not found</p>
+    <img src="Nexodesk-1080p-SVG_Mesa de trabajo 1.svg" alt="Nexodesk">
+  <h1>Site</h1>
+  <p>Under Construction</p>
+    
   <div class="buttons-con">
     <div class="action-link-wrap">
-      <a onclick="history.back(-1)" class="link-button link-back-button">Go Back</a>
-      <a href="" class="link-button">Go to Home Page</a>
+      
     </div>
   </div>
 </div></body></html>
