--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </g>
 </svg>
 <div class="message-box">
-    <img src="Nexodesk-1080p-SVG_Mesa de trabajo 1.png" height="40" alt="Nexodesk">
+    <img src="Nexodesk-1080p-SVG_Mesa de trabajo 1.png" height="350" class="Elemento" alt="Nexodesk">
   <h1>Site</h1>
   <p>Under Construction</p>
     
