--- a/index.html
+++ b/index.html
@@ -1,20 +1,96 @@
-<html><head><link rel="stylesheet" href="style.css"></head><body><svg width="380px" height="500px" viewBox="0 0 837 1045" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-        <path d="M353,9 L626.664028,170 L626.664028,487 L353,642 L79.3359724,487 L79.3359724,170 L353,9 Z" id="Polygon-1" stroke="#007FB2" stroke-width="6" sketch:type="MSShapeGroup"></path>
-        <path d="M78.5,529 L147,569.186414 L147,648.311216 L78.5,687 L10,648.311216 L10,569.186414 L78.5,529 Z" id="Polygon-2" stroke="#EF4A5B" stroke-width="6" sketch:type="MSShapeGroup"></path>
-        <path d="M773,186 L827,217.538705 L827,279.636651 L773,310 L719,279.636651 L719,217.538705 L773,186 Z" id="Polygon-3" stroke="#795D9C" stroke-width="6" sketch:type="MSShapeGroup"></path>
-        <path d="M639,529 L773,607.846761 L773,763.091627 L639,839 L505,763.091627 L505,607.846761 L639,529 Z" id="Polygon-4" stroke="#F2773F" stroke-width="6" sketch:type="MSShapeGroup"></path>
-        <path d="M281,801 L383,861.025276 L383,979.21169 L281,1037 L179,979.21169 L179,861.025276 L281,801 Z" id="Polygon-5" stroke="#36B455" stroke-width="6" sketch:type="MSShapeGroup"></path>
-    </g>
-</svg>
-<div class="message-box">
-    <img src="Nexodesk-1080p-SVG_Mesa de trabajo 1.png" height="350" class="Elemento" alt="Nexodesk">
-  <h1>Site</h1>
-  <p>Under Construction</p>
-    
-  <div class="buttons-con">
-    <div class="action-link-wrap">
-      
-    </div>
-  </div>
-</div></body></html>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Under construction/maintenance city</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<main>
+  <section class="advice">
+<img src="Nexodesk-1080p-SVG_Mesa de trabajo 1.png" height="350" class="Elemento" alt="Nexodesk">
+    <h1 class="advice__title">Site under construction or maintenance </h1>
+    <p class="advice__description"><span><</span> building <span>/></span> not finished yet</p>
+
+  </section>
+  <section class="city-stuff">
+    <ul class="skyscrappers__list">
+      <li class="skyscrapper__item skyscrapper-1"></li>
+      <li class="skyscrapper__item skyscrapper-2"></li>
+      <li class="skyscrapper__item skyscrapper-3"></li>
+      <li class="skyscrapper__item skyscrapper-4"></li>
+      <li class="skyscrapper__item skyscrapper-5"></li>
+    </ul>
+    <ul class="tree__container">
+      <li class="tree__list">
+        <ul class="tree__item tree-1">
+          <li class="tree__trunk"></li>
+          <li class="tree__leaves"></li>
+        </ul>
+        <ul class="tree__item tree-2">
+          <li class="tree__trunk"></li>
+          <li class="tree__leaves"></li>
+        </ul>
+        <ul class="tree__item tree-3">
+          <li class="tree__trunk"></li>
+          <li class="tree__leaves"></li>
+        </ul>  
+        <ul class="tree__item tree-4">
+          <li class="tree__trunk"></li>
+          <li class="tree__leaves"></li>
+        </ul>  
+        <ul class="tree__item tree-5">
+          <li class="tree__trunk"></li>
+          <li class="tree__leaves"></li>
+        </ul>  
+        <ul class="tree__item tree-6">
+          <li class="tree__trunk"></li>
+          <li class="tree__leaves"></li>
+        </ul>  
+        <ul class="tree__item tree-7">
+          <li class="tree__trunk"></li>
+          <li class="tree__leaves"></li>
+        </ul>  
+        <ul class="tree__item tree-8">
+          <li class="tree__trunk"></li>
+          <li class="tree__leaves"></li>
+        </ul>  
+      </li>
+    </ul>
+    <ul class="crane__list crane-1">
+      <li class="crane__item crane-cable crane-cable-1"></li>
+      <li class="crane__item crane-cable crane-cable-2"></li>
+      <li class="crane__item crane-cable crane-cable-3"></li>
+      <li class="crane__item crane-stand"></li>
+      <li class="crane__item crane-weight"></li>
+      <li class="crane__item crane-cabin"></li>
+      <li class="crane__item crane-arm"></li>
+    </ul>
+    <ul class="crane__list crane-2">
+      <li class="crane__item crane-cable crane-cable-1"></li>
+      <li class="crane__item crane-cable crane-cable-2"></li>
+      <li class="crane__item crane-cable crane-cable-3"></li>
+      <li class="crane__item crane-stand"></li>
+      <li class="crane__item crane-weight"></li>
+      <li class="crane__item crane-cabin"></li>
+      <li class="crane__item crane-arm"></li>
+    </ul>
+    <ul class="crane__list crane-3">
+      <li class="crane__item crane-cable crane-cable-1"></li>
+      <li class="crane__item crane-cable crane-cable-2"></li>
+      <li class="crane__item crane-cable crane-cable-3"></li>
+      <li class="crane__item crane-stand"></li>
+      <li class="crane__item crane-weight"></li>
+      <li class="crane__item crane-cabin"></li>
+      <li class="crane__item crane-arm"></li>
+    </ul>
+  </section>
+</main>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
